Project

General

Profile

Actions

Bug #15154

closed

crush:when define the item below the bucket,can not find the item.

Added by ceph zte about 8 years ago. Updated over 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Community (dev)
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

When we define the item below the bucket in the map.txt.Then we compile the map,txt

to the map.bin.It will error for cannnot find the item. It is very amazing for usr that

who have define it,but the ceph told him than can not find it.SO slove it!

Actions #2

Updated by Kefu Chai almost 8 years ago

  • Status changed from New to Fix Under Review
Actions #3

Updated by Loïc Dachary over 7 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF