crush: fix the problem that can not find the define item below the bucket

Fixes: http://tracker.ceph.com/issues/15154
Signed-off-by: song baisen <song.baisen@zte.com.cn>